# ani-tracker

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  env  env.example  launch_dev_service.sh  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  docker-image.yml  release.yml
app/: celery_app.py  db.py  factory.py  languages.py  main.py  utils.py
app/api/: __init__.py  anime.py  anime_assets.py  anime_episodes.py  anime_info.py  auth.py  oidc.py  routes.py  statistics.py  tvtime_import.py  user.py  watch_state.py
app/import_provider/: __init__.py  base.py  exceptions.py  factory.py  types.py  utils.py
app/migrations/: env.py
app/models/: __init__.py  anime.py  anime_utils.py  base.py  progress.py  provider_sync.py  user.py  validater.py
app/services/: anime_cleanup.py  anime_library.py  anime_poster.py  anime_statistics.py  anime_sync.py  episode_status.py  library_refresh_jobs.py  name_keys.py  (+3 more)
docker/: entrypoint.sh  nginx.conf
docs/: README.zh-CN.md  branding.md  branding.zh-CN.md  design_style.md  design_style.zh-CN.md  development.md  development.zh-CN.md  episode_ticket_stub_interaction.md  episode_ticket_stub_interaction.zh-CN.md
scripts/: build_release.sh
tests/: conftest.py  test_anime_library.py  test_anime_poster.py  test_anime_search.py  test_auth.py  test_db_migrations.py  test_runtime_config.py  test_tmdb_import_provider.py  test_tvdb_import_provider.py  test_user_wallpapers.py  test_utils.py
web/: .env.example  README.md  next.config.ts  package.json  pnpm-lock.yaml
(+130 files in other folders)
