[project]
name = "ani-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "flask>=3.1.2",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.51",
]

[dependency-groups]
dev = [
    "mypy>=1.14.0",
    "pytest>=9.0.2",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
pythonpath = ["."]
