[project]
name = "ani-tracker"
version = "0.1.0"
license = "Apache-2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.17.2",
    "authlib>=1.7.2",
    "celery>=5.6.0",
    "click>=8.4.2",
    "flask>=3.1.2",
    "gunicorn>=26.0.0",
    "psycopg[binary]>=3.2.0",
    "pypinyin>=0.55.0",
    "redis>=5.2.0",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.51",
]

[dependency-groups]
dev = [
    "mypy>=1.14.0",
    "pytest>=9.0.2",
    "ruff>=0.15.20",
]

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
